--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,34 +1,28 @@
-<h1>Welcome to RoadBnb</h1>
+<div class="container">
+  <h1 class="mt-4">Welcome to RoadBnb</h1>
 
-<h2>Cars Listing</h2>
+  <h2 class="mt-4">Cars Listing</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Make</th>
-      <th>Model</th>
-      <th>Year</th>
-      <th>Image</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-  <tbody>
+  <div class="row mt-3">
     <% @cars.each do |car| %>
-      <tr>
-        <td><%= car.make %></td>
-        <td><%= car.model %></td>
-        <td><%= car.year %></td>
-        <td><img src="<%= car.img_url %>" alt="Car image" height="50"></td>
-        <td><%= link_to 'Show', car %></td>
-      </tr>
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <img src="<%= car.img_url %>" class="card-img-top" alt="Car image">
+          <div class="card-body">
+            <h5 class="card-title"><%= car.make %> <%= car.model %></h5>
+            <p class="card-text">Year: <%= car.year %></p>
+            <%= link_to 'Show', car, class: 'btn btn-primary' %>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
 
-<%= link_to 'New Car', new_car_path %>
+  <%= link_to 'New Car', new_car_path, class: 'btn btn-success' %>
 
-<% if user_signed_in? %>
-  <%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete } %>
-<% else %>
-  <%= link_to 'Sign In', new_user_session_path %>
-<% end %>
+  <% if user_signed_in? %>
+    <%= link_to 'Sign Out', destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn btn-danger' %>
+  <% else %>
+    <%= link_to 'Sign In', new_user_session_path, class: 'btn btn-primary' %>
+  <% end %>
+</div>
