--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
   </head>
 
   <body>
-    <%= render partial: 'layouts/navbar' %>
+  <%= render partial: 'layouts/navbar' %>
+
+  <div class="container mt-4">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
-  </body>
+  </div>
+</body>
 </html>
