--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -47,18 +47,17 @@
     </div>
   </div>
 
-  <% if user_signed_in? %>
-  <% car_bookings = current_user.bookings.where(car_id: @car.id) %>
-    <% if !car_bookings.empty? %>
-      <div>
-        <h2>Your bookings for this car:</h2>
-        <% car_bookings.each do |booking| %>
-          <p>You've booked this car for <%= booking.date %></p>
-        <% end %>
-      </div>
-    <% end %>
-
-  <% end %>
+<%# if user_signed_in? %>
+  <%# car_bookings = current_user.bookings.where(car_id: @car.id) %>
+    <%# if !car_bookings.empty? %>
+      <%# <div>
+        <%# <h2>Your bookings for this car:</h2>
+        <%# car_bookings.each do |booking| %>
+          <%# <p>You've booked this car for <%= booking.date %></p>
+        <%# end %>
+      <%# </div> %>
+    <%# end %>
+<%# end %>
 
   <%= link_to 'Back', cars_path, class: "btn btn-secondary mt-3" %>
 </div>
