When a new car is created, a marker of the car is added to the map. Needs styling as you can see...

--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -4,6 +4,7 @@
   <%= form.input :model %>
   <%= form.input :year %>
   <%= form.input :img_url %>
+  <%= form.input :address %>
 
   <%= form.submit %>
 <% end %>
