--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,16 +1,31 @@
-<div class="row mt-3">
-  <% @cars.each do |car| %>
-    <div class="col-md-4 mb-4">
-      <div class="card h-100"> <!-- Added h-100 class to make cards equal height -->
-        <img src="<%= car.img_url %>" class="card-img-top" alt="Car image" style="height: 200px; object-fit: cover;"> <!-- Fixed image height -->
-        <div class="card-body d-flex flex-column"> <!-- Flex column for content alignment -->
-          <h5 class="card-title"><%= car.make %> <%= car.model %></h5>
-          <p class="card-text">Year: <%= car.year %></p>
-          <div class="mt-auto"> <!-- Pushes button to the bottom -->
-            <%= link_to 'Show', car, class: 'btn btn-primary' %>
-          </div>
+<div class="container-fluid">
+  <div class="row mt-3">
+    <!-- Cars list column -->
+    <div class="col-md-6">
+      <div class="cars-scrollable"> <!-- Added a container for scrollable cars list -->
+        <div class="row">
+          <% @cars.each do |car| %>
+            <div class="col-md-12 mb-4">
+              <div class="card h-100"> <!-- Added h-100 class to make cards equal height -->
+                <img src="<%= car.img_url %>" class="card-img-top" alt="Car image" style="height: 200px; object-fit: cover;"> <!-- Fixed image height -->
+                <div class="card-body d-flex flex-column"> <!-- Flex column for content alignment -->
+                  <h5 class="card-title"><%= car.make %> <%= car.model %></h5>
+                  <p class="card-text">Year: <%= car.year %></p>
+                  <div class="mt-auto"> <!-- Pushes button to the bottom -->
+                    <%= link_to 'Show', car, class: 'btn btn-primary' %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
-  <% end %>
+    <!-- Map column -->
+    <div class="col-md-6" class="mt-50" id="map-container">
+      <div style="position: fixed; top: 0; right: 0; bottom: 0; width: 50%; height: 100%;">
+        <div id="map" style="height: 100%;" data-controller="map" data-map-markers-value="<%= @markers.to_json %>" data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      </div>
+    </div>
+  </div>
 </div>
